--- a/index.html
+++ b/index.html
@@ -1,270 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Styled Layout</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+      color: #333;
+    }
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
-            line-height: 1.6;
-        }
+    header {
+      background-color: #007BFF;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        a {
-            text-decoration: none;
-            color: inherit;
-            transition: color 0.3s ease;
-        }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #0056b3;
+      padding: 10px 0;
+    }
 
-        a:hover {
-            color: #007BFF;
-        }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
 
-        /* Navbar */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
+    nav a:hover {
+      background-color: white;
+      color: #0056b3;
+    }
 
-        nav .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #007BFF;
-        }
+    main {
+      padding: 20px;
+      background-color: white;
+      max-width: 900px;
+      margin: 20px auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        nav ul {
-            display: flex;
-            list-style: none;
-            gap: 1.5rem;
-        }
+    footer {
+      background-color: #007BFF;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        nav ul li {
-            font-weight: 500;
-        }
+    button {
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
 
-        nav ul li a:hover {
-            color: #0056b3;
-        }
+    button:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
 
-        /* Hero Section */
-        #hero {
-            height: 100vh;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), 
-                        url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') no-repeat center/cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            color: white;
-        }
-
-        #hero h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-        }
-
-        #hero p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        #hero .cta {
-            background-color: #007BFF;
-            color: white;
-            padding: 1rem 2rem;
-            border-radius: 50px;
-            font-size: 1.2rem;
-            font-weight: 600;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, background-color 0.3s ease;
-        }
-
-        #hero .cta:hover {
-            background-color: #0056b3;
-            transform: translateY(-5px);
-        }
-
-        /* Section Styling */
-        section {
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-
-        section h2 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 1.5rem;
-            color: #333;
-        }
-
-        section p {
-            font-size: 1rem;
-            color: #555;
-            margin-bottom: 2rem;
-        }
-
-        /* Skills Section */
-        #skills .skills-container {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            flex-wrap: wrap;
-        }
-
-        #skills .skill-card {
-            background: white;
-            border-radius: 10px;
-            padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        #skills .skill-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        #skills .skill-card h3 {
-            color: #007BFF;
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-        }
-
-        /* Projects Section */
-        #projects .projects-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        #projects .project-card {
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        #projects .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        #projects .project-card img {
-            width: 100%;
-            display: block;
-        }
-
-        #projects .project-card h3 {
-            padding: 1rem;
-            font-size: 1.5rem;
-            color: #007BFF;
-        }
-
-        /* Contact Section */
-        #contact {
-            background-color: #007BFF;
-            color: white;
-            padding: 4rem 2rem;
-        }
-
-        #contact a {
-            display: inline-block;
-            background-color: white;
-            color: #007BFF;
-            padding: 1rem 2rem;
-            border-radius: 50px;
-            font-weight: 600;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        #contact a:hover {
-            background-color: #0056b3;
-            color: white;
-        }
-
-        footer {
-            background-color: #0056b3;
-            color: white;
-            padding: 1rem 0;
-            text-align: center;
-        }
-    </style>
+    button:active {
+      transform: scale(1);
+    }
+  </style>
 </head>
 <body>
-    <nav>
-        <div class="logo">MyPortfolio</div>
-        <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="hero">
-        <div>
-            <h1>Hello, I'm [Your Name]</h1>
-            <p>Web Developer | Designer | Creator</p>
-            <a href="#contact" class="cta">Get in Touch</a>
-        </div>
-    </section>
-
-    <section id="skills">
-        <h2>My Skills</h2>
-        <div class="skills-container">
-            <div class="skill-card">
-                <h3>HTML</h3>
-            </div>
-            <div class="skill-card">
-                <h3>CSS</h3>
-            </div>
-            <div class="skill-card">
-                <h3>JavaScript</h3>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects">
-        <h2>My Projects</h2>
-        <div class="projects-container">
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300x200" alt="Project 1">
-                <h3>Project One</h3>
-            </div>
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300x200" alt="Project 2">
-                <h3>Project Two</h3>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <a href="mailto:example@email.com">Email Me</a>
-    </section>
-
-    <footer>
-        &copy; 2025 MyPortfolio. All rights reserved.
-    </footer>
+  <header>
+    <h1>Welcome to My Styled Page</h1>
+  </header>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+  <main>
+    <h2>Main Content</h2>
+    <p>This is a sample layout with improved styles. Feel free to customize it further!</p>
+    <button>Click Me</button>
+  </main>
+  <footer>
+    <p>&copy; 2025 My Styled Page</p>
+  </footer>
 </body>
 </html>
